--- a/RandomCypher/package.json
+++ b/RandomCypher/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "express": "^4.21.0",
     "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
