--- a/RandomCypher/package.json
+++ b/RandomCypher/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "express": "^4.21.0",
     "http-proxy-middleware": "^3.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
